--- a/caseStudyWP/bib/refs.bib
+++ b/caseStudyWP/bib/refs.bib
@@ -26,7 +26,7 @@
 	author = {Holtby, L. Blair and Ciruna, Kristine  A.},
 	year = {2007},
 	pages = {358},
-	file = {334860.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\A26ES6NW\\334860.pdf:application/pdf},
+	file = {Holtby and Ciruna - 2007 - Conservation Units for Pacific Salmon under the Wi.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\A26ES6NW\\Holtby and Ciruna - 2007 - Conservation Units for Pacific Salmon under the Wi.pdf:application/pdf},
 }
 
 @article{debertin_marine_2017,
@@ -57,7 +57,7 @@
 	year = {2005},
 	note = {OCLC: ocm61863454},
 	keywords = {Canada, Conservation Government policy, Pacific salmon},
-	file = {315577.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\XH8BPDZC\\315577.pdf:application/pdf},
+	file = {Canada - 2005 - Canada's policy for conservation of wild Pacific s.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\XH8BPDZC\\Canada - 2005 - Canada's policy for conservation of wild Pacific s.pdf:application/pdf},
 }
 
 @article{holt_indicators_2009,
@@ -67,7 +67,7 @@
 	author = {Holt, Carrie A and Cass, Alan and Holtby, Blair and Riddell, Brian},
 	year = {2009},
 	pages = {82},
-	file = {Holt et al. - Indicateurs de l’état des stocks et repères à l’in.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\UGUG3PWI\\Holt et al. - Indicateurs de l’état des stocks et repères à l’in.pdf:application/pdf},
+	file = {Holt et al. - 2009 - Indicators of Status and Benchmarks for Conservati.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\MHF9YRE8\\Holt et al. - 2009 - Indicators of Status and Benchmarks for Conservati.pdf:application/pdf},
 }
 
 @techreport{hilborn_british_2012,
@@ -79,7 +79,7 @@
 	author = {Hilborn, Ray and Schmidt, Dana and English, Karl and Devitt, Steve},
 	year = {2012},
 	pages = {458},
-	file = {BC Chum FCR_27Nov12_Final.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\KZ9QIW9G\\BC Chum FCR_27Nov12_Final.pdf:application/pdf},
+	file = {Hilborn et al. - 2012 - British Columbia Chum Salmon (Oncorhynchus keta.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\KZ9QIW9G\\Hilborn et al. - 2012 - British Columbia Chum Salmon (Oncorhynchus keta.pdf:application/pdf},
 }
 
 @techreport{piston_chum_2011,
@@ -92,29 +92,31 @@
 	author = {Piston, Andrew W and Heinl, Steven C},
 	year = {2011},
 	pages = {65},
-	file = {Piston - Chum salmon stock status and escapement goals in S.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\QSYQU36Y\\Piston - Chum salmon stock status and escapement goals in S.pdf:application/pdf},
+	file = {Piston and Heinl - 2011 - Chum salmon stock status and escapement goals in S.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\QSYQU36Y\\Piston and Heinl - 2011 - Chum salmon stock status and escapement goals in S.pdf:application/pdf},
 }
 
-@article{otis_escapement_nodate,
+@techreport{otis_escapement_2004,
+	address = {Anchorage},
 	title = {Escapement goals for salmon stocks in {Lower} {Cook} {Inlet}, {Alaska}},
+	url = {https://www.adfg.alaska.gov/FedAidpdfs/Sp04-14.pdf},
 	language = {en},
-	author = {Otis, Edward O},
+	number = {Special Publication No. 04-14},
+	institution = {Alaska Department of Fish and Game},
+	author = {Otis, Edward O and Hasbrouk, James J},
+	year = {2004},
 	pages = {31},
-	file = {Otis - Escapement goals for salmon stocks in Lower Cook I.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\H9WTQHBJ\\Otis - Escapement goals for salmon stocks in Lower Cook I.pdf:application/pdf},
+	file = {Otis and Hasbrouk - 2004 - Escapement goals for salmon stocks in Lower Cook I.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\H9WTQHBJ\\Otis and Hasbrouk - 2004 - Escapement goals for salmon stocks in Lower Cook I.pdf:application/pdf},
 }
 
-@incollection{quinn_evaluation_2017,
+@techreport{clark_evaluation_2014,
 	title = {An {Evaluation} of the {Percentile} {Approach} for {Establishing} {Sustainable} {Escapement} {Goals} in {Lieu} of {Stock} {Productivity} {Information}},
 	url = {https://seagrant.uaf.edu/bookstore/pubs/item.php?id=12385},
 	language = {en},
+	number = {Fishery Manuscript No. 14-06},
 	urldate = {2021-05-14},
-	booktitle = {Assessing and {Managing} {Data}-{Limited} {Fish} {Stocks}},
-	publisher = {Alaska Sea Grant, University of Alaska Fairbanks},
+	institution = {Alaska Department of Fish and Game},
 	author = {Clark, Ra and Eggers, Dm and Munro, Ar and Fleischman, Sj and Bue, Bg and Hasbrouck, Jj},
-	editor = {Quinn, Tj and Armstrong, Jl and Baker, Mr and Heifetz, Jd},
-	collaborator = {Witherell, D},
-	month = feb,
-	year = {2017},
+	year = {2014},
 	doi = {10.4027/amdlfs.2016.08},
 	file = {Clark et al. - 2017 - An Evaluation of the Percentile Approach for Estab.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\N2JI7RQF\\Clark et al. - 2017 - An Evaluation of the Percentile Approach for Estab.pdf:application/pdf},
 }
@@ -134,4 +136,62 @@
 	year = {2021},
 	pages = {179--195},
 	file = {Litz et al. - 2021 - Competition with odd-year pink salmon in the ocean.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\H6KKI3CF\\Litz et al. - 2021 - Competition with odd-year pink salmon in the ocean.pdf:application/pdf},
+}
+
+@techreport{iucn_standards_and_petitions_committee_guidelines_2019,
+	title = {Guidelines for {Using} the {IUCN} {Red} {List} {Categories} and {Criteria}},
+	url = {http://www.iucnredlist.org/documents/RedListGuidelines.pdf},
+	number = {Version 14},
+	institution = {Prepared by the Standards and Petitions Committee},
+	author = {IUCN Standards {and} Petitions Committee},
+	year = {2019},
+	file = {RedListGuidelines.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\XL3S2Z6P\\RedListGuidelines.pdf:application/pdf},
+}
+
+@misc{cosewic_cosewic_2019,
+	title = {{COSEWIC} {Assessment} {Process}, {Categories} and {Guidelines}},
+	url = {https://cosewic.ca/images/cosewic/pdf/Assessment_process_criteria_Nov_2019_en.pdf},
+	author = {COSEWIC},
+	year = {2019},
+	file = {Assessment_process_criteria_Nov_2019_en.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\C4GRTQIB\\Assessment_process_criteria_Nov_2019_en.pdf:application/pdf},
+}
+
+@techreport{fisheries_and_oceans_canada_harvest_2006,
+	title = {A harvest strategy compliant with the precautionary approach},
+	url = {https://www.dfo-mpo.gc.ca/csas/Csas/status/2006/SAR-AS2006_023_E.pdf},
+	number = {2006/023},
+	institution = {Fisheries and Oceans Canada},
+	author = {Fisheries {and} Oceans Canada},
+	year = {2006},
+	file = {SAR-AS2006_023_E.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\34EFPHGM\\SAR-AS2006_023_E.pdf:application/pdf},
+}
+
+@misc{government_of_canada_fishery_2009,
+	title = {A fishery decision-making framework incorporating the precautionary approach},
+	url = {https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/precaution-eng.htm},
+	abstract = {A fishery decision-making framework incorporating the precautionary approach},
+	language = {eng},
+	urldate = {2020-10-16},
+	author = {Government of Canada, Fisheries {and} Oceans Canada},
+	month = mar,
+	year = {2009},
+	note = {Last Modified: 2009-03-23},
+	file = {Snapshot:C\:\\Users\\WarkentinL\\Zotero\\storage\\UIYHN55Z\\precaution-eng.html:text/html;Government of Canada - 2009 - A fishery decision-making framework incorporating .pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\5Y2LPZ9X\\Government of Canada - 2009 - A fishery decision-making framework incorporating .pdf:application/pdf},
+}
+
+@article{cheng_upper_2021,
+	title = {Upper {Ocean} {Temperatures} {Hit} {Record} {High} in 2020},
+	volume = {38},
+	issn = {0256-1530, 1861-9533},
+	url = {http://link.springer.com/10.1007/s00376-021-0447-x},
+	doi = {10.1007/s00376-021-0447-x},
+	language = {en},
+	number = {4},
+	urldate = {2021-04-08},
+	journal = {Advances in Atmospheric Sciences},
+	author = {Cheng, Lijing and Abraham, John and Trenberth, Kevin E. and Fasullo, John and Boyer, Tim and Locarnini, Ricardo and Zhang, Bin and Yu, Fujiang and Wan, Liying and Chen, Xingrong and Song, Xiangzhou and Liu, Yulong and Mann, Michael E. and Reseghetti, Franco and Simoncelli, Simona and Gouretski, Viktor and Chen, Gengxin and Mishonov, Alexey and Reagan, Jim and Zhu, Jiang},
+	month = apr,
+	year = {2021},
+	pages = {523--530},
+	file = {Cheng2021_Article_UpperOceanTemperaturesHitRecor.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\JHTG6VLG\\Cheng2021_Article_UpperOceanTemperaturesHitRecor.pdf:application/pdf},
 }
