--- a/caseStudyWP/05-chap5.Rmd
+++ b/caseStudyWP/05-chap5.Rmd
@@ -118,8 +118,8 @@ Level of abundance that could lead to a CU being considered at risk of extinctio
       - a decline in index of area of occupancy, extent of occurrence and/or quality of habitat
       - actual or potential levels of exploitation
       - the effects of introduced taxa, hybridization, pathogens, pollutants, competitors, or parasites
-  - Reduction of >= 70% = endangered
-  - reduction of >= 50% = threatened
+  - Reduction of $\geq$ 70% = endangered
+  - reduction of $\geq$ 50% = threatened
 - @iucn_standards_and_petitions_committee_guidelines_2019: Table 2.1
   - same as COSEWIC above, but uses "Vulnerable" instead of "Threatened"
 
@@ -171,27 +171,58 @@ Recommendations from @holt_evaluating_2018:
 
 For Inside South Coast chum, there are no reliable data on marine survival for wild fish, and no proxies based on coded wire tag or age at return of hatchery chum in this SMU. This meant that the Ricker model used to estimate the spawner-recruit relationship did account for marine survival (compared to Interior Fraser Coho). 
 
-We used a basic Ricker model to estimate the the predicted recruits $\hat{R}$ from spawners $S$, productivity $\alpha$, and the strength of density dependence $\beta$ for each stock $i$ \@ref(eq:ricker). We used the log-transformed Ricker equation so that the residuals/error would be normally distributed \@ref(eq:log-ricker). *\textcolor{cyan}{LW: is this correct about the residuals/error?}* 
+We used a basic Ricker model 
+
+
+
+The basic Ricker equation uses spawners $S$, productivity $\alpha$, and the strength of density dependence $\beta$ to predict recruits $R$ (Equation \@ref(eq:ricker)). Note that recruits includes spawners and adults caught in fishereis. We used the log-transformed Ricker equation so that the residuals/error would be normally distributed (Equation \@ref(eq:logricker)). 
 
 \begin{equation}
-    log(R) = \alpha \centerdot S e^{-\beta * S} 
+    R = \alpha S e^{-\beta S} 
     (\#eq:ricker)
 \end{equation}
 
 \begin{equation}
-  log(\hat{R}) = log(\alpha_i) + log(S) - e^{log(\beta_i)} * S 
-  (\#eq:log-ricker)
+  log(\hat{R}) = log(\alpha_i) + log(S) - S \beta_i 
+  (\#eq:logricker)
+\end{equation}
+  
+We estimated the predicted recruits $\hat{R}$ from spawners $S$, productivity $\alpha$, and the strength of density dependence $\beta$ for each stock $i$ (Equation \@ref(eq:log_ricker)).  *\textcolor{cyan}{LW: is this correct about the residuals/error?}* The natural log of observed recruits per spawner $log(\frac{R}{S})$ were assumed to be drawn from a normal distribution (normal error) with mean $log(\frac{\hat{R}}{S})$ and standard deviation $\sigma_i$ (Equation \@ref(eq:likelihood-recruits)).
+
+\begin{equation}
+    log(\frac{R}{S}) \sim Normal( log(\frac{\hat{R}}{S}) , \sigma_i)
+    (\#eq:likelihood-recruits)
+\end{equation}
+
+$S_MSY$ was calculated using Lambert's W function @scheurell_REF_2016 (Equation \@ref(eq:SMSY))
+
+\begin{equation}
+    S_{MSY} = \frac { 1 - Lambert_W(e ^ {1-log(\alpha)})} {\beta}
+    (\#eq:SMSY)
+\end{equation}
+
+$S_{gen}$ was estimated from $S_{MSY}$ by assuming that the difference between the $\hat{S}_{MSY}$ (estimated from $\alpha$, $\beta$, and $S_{gen}$) and the $S_{MSY}$ calculated using Lambert's W function was normally distributed with mean 0 and standard deviation $\sigma_{S_{gen}}$ (Equations \@ref(eq:Sgen), \@ref(eq:likelihood-Sgen)).
+
+\begin{equation}
+    log(\hat{S}_{MSY}) = log(\alpha) + log(S_{gen}) - \beta S_{gen}
+    (\#eq:Sgen)
+\end{equation}
+
+\begin{equation}
+    \hat{S}_{MSY} - S_{MSY} \sim Normal( 0, \sigma_{S_{gen}})
+    (\#eq:likelihood-Sgen)
 \end{equation}
 
 
+We used R (ref) and the Template Model Builder *TMB* package to fit Ricker models and logistic regressions of aggregate abundance (@kristensen_tmb_2016). 
 
-Warnings with Sgen / ricker based benchmarks:
+Warnings with $S_{gen}$ / ricker based benchmarks:
 
-- Ignores variability in actual recruits/spawner (Sgen is based on mean \alpha value). This can be problematic if there are large residuals (especially negative) in the stock-recruit curve at low spawner abundance. For example, if 20% of the time (based on record of recruits/spawner), Sgen spawners actually had recruits/spawner less than 1. Then you set up a potential tail-spin to low abundance, depending on the frequency of these low recruitment cohorts at low abundance.
-- Because they are set at the CU level (high level in terms of stock-recruit relationship, not at the scale of stream-level density-dependence or ocean-level density dependence including overlapping species (e.g., Alaska, pacific ocean)), they may not explicitly model density dependence at scales where it is probably occurring. 
-- Assumes productivity and density-dependence are constant (not true, especially given the importance of biomass of pinks for chum salmon, ocean food availability)
-- \alpha and \beta are negatively correlated: sensitive to each other, especially when fit is not good, this is problematic, especially since $S_MSY$ and $S_gen$ depend on both \alpha and \beta
-- $MSY$ and its derivatives (e.g., $S_MSY$, $S_gen$) are not based on COSEWIC risk of extinction metrics such as percent decreases in spawner abundance 
+- Ignores variability in actual recruits/spawner ($S_{gen}$ is based on mean $\alpha$ value). This can be problematic if there are large residuals (especially negative) in the stock-recruit curve at low spawner abundance. For example, if 20% of the time (based on record of recruits/spawner), $S_{gen}$ spawners actually had recruits/spawner less than 1. Then you set up a potential tail-spin to low abundance, depending on the frequency of these low recruitment cohorts at low abundance.
+- Because they are set at the CU level (high level in terms of stock-recruit relationship, not at the scale of stream-level density-dependence or ocean-level density dependence including overlapping species (e.g., Alaska, pacific ocean)), they may not explicitly model density dependence at scales where it is probably occurring.
+- Assumes productivity and density-dependence are constant
+- $\alpha$ and $\beta$ are negatively correlated: sensitive to each other, especially when fit is not good, this is problematic, especially since $S_{MSY}$ and $S_{gen}$ depend on both $\alpha$ and $\beta$
+- $MSY$ and its derivatives, e.g., $S_{MSY}$, $S_{gen}$ are not based on COSEWIC risk of extinction metrics such as percent decreases in spawner abundance
 
 #### Benchmark based on historical abundance - Percentile
 
