--- a/caseStudyWP/bib/refs.bib
+++ b/caseStudyWP/bib/refs.bib
@@ -143,7 +143,7 @@
 	url = {http://www.iucnredlist.org/documents/RedListGuidelines.pdf},
 	number = {Version 14},
 	institution = {Prepared by the Standards and Petitions Committee},
-	author = {IUCN Standards {and} Petitions Committee},
+	author = {{IUCN Standards and Petitions Committee}},
 	year = {2019},
 	file = {RedListGuidelines.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\XL3S2Z6P\\RedListGuidelines.pdf:application/pdf},
 }
@@ -194,4 +194,15 @@
 	year = {2021},
 	pages = {523--530},
 	file = {Cheng2021_Article_UpperOceanTemperaturesHitRecor.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\JHTG6VLG\\Cheng2021_Article_UpperOceanTemperaturesHitRecor.pdf:application/pdf},
+}
+
+@article{kristensen_tmb_2016,
+	title = {{TMB}: {Automatic} {Differentiation} and {Laplace} {Approximation}},
+	volume = {70},
+	doi = {10.18637/jss.v070.i05},
+	number = {5},
+	journal = {Journal of Statistical Software},
+	author = {Kristensen, Kasper and Nielsen, Anders and Berg, Casper W. and Skaug, Hans and Bell, Bradley M.},
+	year = {2016},
+	pages = {1--21},
 }
