--- a/caseStudyWP/bib/refs.bib
+++ b/caseStudyWP/bib/refs.bib
@@ -102,7 +102,7 @@
 	language = {en},
 	number = {Special Publication No. 04-14},
 	institution = {Alaska Department of Fish and Game},
-	author = {Otis, Edward O and Hasbrouk, James J},
+	author = {Otis, Edward O and Hasbrouck, James J},
 	year = {2004},
 	pages = {31},
 	file = {Otis and Hasbrouk - 2004 - Escapement goals for salmon stocks in Lower Cook I.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\H9WTQHBJ\\Otis and Hasbrouk - 2004 - Escapement goals for salmon stocks in Lower Cook I.pdf:application/pdf},
@@ -115,7 +115,7 @@
 	number = {Fishery Manuscript No. 14-06},
 	urldate = {2021-05-14},
 	institution = {Alaska Department of Fish and Game},
-	author = {Clark, Ra and Eggers, Dm and Munro, Ar and Fleischman, Sj and Bue, Bg and Hasbrouck, Jj},
+	author = {Clark, Robert A and Eggers, Douglas M and Munro, Andrew R and Fleischman, Steven J and Bue, Brian G and Hasbrouck, James J},
 	year = {2014},
 	doi = {10.4027/amdlfs.2016.08},
 	file = {Clark et al. - 2017 - An Evaluation of the Percentile Approach for Estab.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\N2JI7RQF\\Clark et al. - 2017 - An Evaluation of the Percentile Approach for Estab.pdf:application/pdf},
@@ -205,4 +205,171 @@
 	author = {Kristensen, Kasper and Nielsen, Anders and Berg, Casper W. and Skaug, Hans and Bell, Bradley M.},
 	year = {2016},
 	pages = {1--21},
+}
+
+@article{reid_two-eyed_2020,
+	title = {“{Two}-{Eyed} {Seeing}”: {An} {Indigenous} framework to transform fisheries research and management},
+	volume = {n/a},
+	copyright = {© 2020 The Authors. Fish and Fisheries published by John Wiley \& Sons Ltd},
+	issn = {1467-2979},
+	shorttitle = {“{Two}-{Eyed} {Seeing}”},
+	url = {http://onlinelibrary.wiley.com/doi/abs/10.1111/faf.12516},
+	doi = {https://doi.org/10.1111/faf.12516},
+	abstract = {Increasingly, fisheries researchers and managers seek or are compelled to “bridge” Indigenous knowledge systems with Western scientific approaches to understanding and governing fisheries. Here, we move beyond the all-too-common narrative about integrating or incorporating (too often used as euphemisms for assimilating) other knowledge systems into Western science, instead of building an ethic of knowledge coexistence and complementarity in knowledge generation using Two-Eyed Seeing as a guiding framework. Two-Eyed Seeing (Etuaptmumk in Mi’kmaw) embraces “learning to see from one eye with the strengths of Indigenous knowledges and ways of knowing, and from the other eye with the strengths of mainstream knowledges and ways of knowing, and to use both these eyes together, for the benefit of all,” as envisaged by Elder Dr. Albert Marshall. In this paper, we examine the notion of knowledge dichotomies and imperatives for knowledge coexistence and draw parallels between Two-Eyed Seeing and other analogous Indigenous frameworks from around the world. It is set apart from other Indigenous frameworks in its explicit action imperative—central to Two-Eyed Seeing is the notion that knowledge transforms the holder and that the holder bears a responsibility to act on that knowledge. We explore its operationalization through three Canadian aquatic and fisheries case-studies that co-develop questions, document and mobilize knowledge, and co-produce insights and decisions. We argue that Two-Eyed Seeing provides a pathway to a plural coexistence, where time-tested Indigenous knowledge systems can be paired with, not subsumed by, Western scientific insights for an equitable and sustainable future.},
+	language = {en},
+	number = {n/a},
+	urldate = {2020-11-22},
+	journal = {Fish and Fisheries},
+	author = {Reid, Andrea J. and Eckert, Lauren E. and Lane, John-Francis and Young, Nathan and Hinch, Scott G. and Darimont, Chris T. and Cooke, Steven J. and Ban, Natalie C. and Marshall, Albert},
+	year = {2020},
+	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/faf.12516},
+	keywords = {co-production, Etuaptmumk, indigenous knowledge, knowledge coexistence, pluralism, Western science},
+	file = {Snapshot:C\:\\Users\\WarkentinL\\Zotero\\storage\\9HK85ESI\\faf.html:text/html;Full Text PDF:C\:\\Users\\WarkentinL\\Zotero\\storage\\GY7PKW5M\\faf.12516.pdf:application/pdf},
+}
+
+@article{lee_diverse_2019,
+	title = {Diverse knowledge systems reveal social–ecological dynamics that inform species conservation status},
+	volume = {12},
+	issn = {1755-263X, 1755-263X},
+	url = {https://onlinelibrary.wiley.com/doi/10.1111/conl.12613},
+	doi = {10.1111/conl.12613},
+	abstract = {Understanding changes over historical timescales is essential to gauge conservation status of a species. Modern ecological data typically neglect past magnitudes of change, which fortunately can be evaluated by bridging disparate knowledge sources. We synthesized zooarchaeological, historical, traditional, and western science knowledge to document changes in relative abundance of key species in Canada's northern abalone social–ecological system (SES) from the Holocene to present. Integrated models ﬁt to traditional and western science data revealed 3.7\% annual population decline from 1940s to 2010s for large abalone, although traditional knowledge density estimates were 9.5× higher than those derived from western science. Abalone are presently scarce compared to the mid-1900s, but more abundant than before the early 1800s, calling their endangered status into question. Linking multiple knowledge sources can build SES understanding, facilitate power sharing, and support ecologically sustainable and socially just conservation outcomes.},
+	language = {en},
+	number = {2},
+	urldate = {2021-05-18},
+	journal = {Conservation Letters},
+	author = {Lee, Lynn Chi and Thorley, Joe and Watson, Jane and Reid, Mike and Salomon, Anne Katherine},
+	month = mar,
+	year = {2019},
+	file = {Lee et al. - 2019 - Diverse knowledge systems reveal social–ecological.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\V8DR5IBU\\Lee et al. - 2019 - Diverse knowledge systems reveal social–ecological.pdf:application/pdf},
+}
+
+@article{ban_incorporate_2018,
+	title = {Incorporate {Indigenous} perspectives for impactful research and effective management},
+	volume = {2},
+	issn = {2397-334X},
+	url = {http://www.nature.com/articles/s41559-018-0706-0},
+	doi = {10.1038/s41559-018-0706-0},
+	language = {en},
+	number = {11},
+	urldate = {2021-05-18},
+	journal = {Nature Ecology \& Evolution},
+	author = {Ban, Natalie C. and Frid, Alejandro and Reid, Mike and Edgar, Barry and Shaw, Danielle and Siwallace, Peter},
+	month = nov,
+	year = {2018},
+	pages = {1680--1683},
+	file = {Ban et al. - 2018 - Incorporate Indigenous perspectives for impactful .pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\6FUVG4VJ\\Ban et al. - 2018 - Incorporate Indigenous perspectives for impactful .pdf:application/pdf},
+}
+
+@article{mckechnie_archaeological_2014,
+	title = {Archaeological data provide alternative hypotheses on {Pacific} herring ( \textit{{Clupea} pallasii} ) distribution, abundance, and variability},
+	volume = {111},
+	issn = {0027-8424, 1091-6490},
+	url = {http://www.pnas.org/lookup/doi/10.1073/pnas.1316072111},
+	doi = {10.1073/pnas.1316072111},
+	language = {en},
+	number = {9},
+	urldate = {2021-03-12},
+	journal = {Proceedings of the National Academy of Sciences},
+	author = {McKechnie, Iain and Lepofsky, Dana and Moss, Madonna L. and Butler, Virginia L. and Orchard, Trevor J. and Coupland, Gary and Foster, Fredrick and Caldwell, Megan and Lertzman, Ken},
+	month = mar,
+	year = {2014},
+	pages = {E807--E816},
+	file = {McKechnie et al. - 2014 - Archaeological data provide alternative hypotheses.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\DPIDT48L\\McKechnie et al. - 2014 - Archaeological data provide alternative hypotheses.pdf:application/pdf},
+}
+
+@article{eckert_diving_2018,
+	title = {Diving back in time: {Extending} historical baselines for yelloweye rockfish with {Indigenous} knowledge},
+	volume = {28},
+	issn = {10527613},
+	shorttitle = {Diving back in time},
+	url = {http://doi.wiley.com/10.1002/aqc.2834},
+	doi = {10.1002/aqc.2834},
+	language = {en},
+	number = {1},
+	urldate = {2021-05-18},
+	journal = {Aquatic Conservation: Marine and Freshwater Ecosystems},
+	author = {Eckert, Lauren E. and Ban, Natalie C. and Frid, Alejandro and McGreer, Madeleine},
+	month = feb,
+	year = {2018},
+	pages = {158--166},
+	file = {Eckert et al. - 2018 - Diving back in time Extending historical baseline.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\2DLCCA89\\Eckert et al. - 2018 - Diving back in time Extending historical baseline.pdf:application/pdf},
+}
+
+@article{meengs_estimating_2005,
+	title = {Estimating the {Size} of {Historical} {Oregon} {Salmon} {Runs}},
+	volume = {13},
+	issn = {1064-1262, 1547-6553},
+	url = {https://www.tandfonline.com/doi/full/10.1080/10641260590921509},
+	doi = {10.1080/10641260590921509},
+	abstract = {Increasing the abundance of salmon in Oregon’s rivers and streams is a high-priority, public policy objective. Salmon runs have been reduced from predevelopment conditions (typically deﬁned as prior to 1850), but it is unclear by how much. Considerable public and private resources have been devoted to restoring salmon runs, but it is uncertain what the current recovery potential is because much of the freshwater and estuarine habitat for salmon has been altered and there is no expectation that it will be returned to a predevelopment condition. The goals of all salmon recovery efforts are based on assumptions about the size of the runs prior to signiﬁcant habitat alteration, coupled with an estimate of the amount and quality of freshwater and estuarine habitat currently available. We estimated the historical aggregate salmon run size in rivers along the Oregon coast (excluding the Columbia River) using two methods: (1) converting estimated aboriginal population levels into numbers of salmon; (2) extrapolating cannery pack into numbers of salmon. Annual aboriginal harvest of all salmon species is estimated to have been approximately 10 million pounds per year (4,500,000 kg) or 1.75–5.36 million salmon, a harvest level similar to that occurring during the height of commercial ﬁshing on Oregon’s coastal rivers in the late 1800s and early 1900s. Extrapolating cannery pack data, the estimated size of the late 1800s aggregate runs of coho salmon (Oncorhynchus kisutch) was 1.5–2.5 million. The estimated size of aggregate runs of chinook salmon (Oncorhynchus tshawytscha) runs was 290,000–517,000. Compared to our estimates of mid-1800s coho salmon levels, early 2000 runs (during favorable ocean conditions), were 11–19\% of the historical level. During poor ocean conditions (1990s), current coho salmon runs were 3–6\% of the historical size.},
+	language = {en},
+	number = {1},
+	urldate = {2021-05-17},
+	journal = {Reviews in Fisheries Science},
+	author = {Meengs, Chad C. and Lackey, Robert T.},
+	month = feb,
+	year = {2005},
+	pages = {51--66},
+	file = {Meengs and Lackey - 2005 - Estimating the Size of Historical Oregon Salmon Ru.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\GBV66ZBR\\Meengs and Lackey - 2005 - Estimating the Size of Historical Oregon Salmon Ru.pdf:application/pdf},
+}
+
+@article{price_abundance_2013,
+	title = {Abundance of {Skeena} {River} {Chum} {Salmon} during the {Early} {Rise} of {Commercial} {Fishing}},
+	volume = {142},
+	issn = {0002-8487, 1548-8659},
+	url = {http://doi.wiley.com/10.1080/00028487.2013.790842},
+	doi = {10.1080/00028487.2013.790842},
+	abstract = {We used reported commercial catch data and historical information to estimate the abundance of Skeena River Chum Salmon Oncorhynchus keta during the early rise (1916–1919) in the commercial ﬁshery to provide historical perspective for recovery plans. We applied a Bayesian analysis to address the uncertainties associated with the estimation process. Based on the historical catch of 204,000 in 1919 and an estimated harvest rate of 0.32–0.58, the estimated return of Skeena Chum Salmon ranged from 355,000 to 619,000, with the most probable single estimate being 431,000. The estimated return of Chum Salmon based on the 1916–1919 geometric mean catch of 154,000 ranged from 268,000 to 471,000, with the most probable single estimate being 325,000. Our posterior modal historical estimates are 8–11 times larger than the estimates for the contemporary period 1982–2010 and 39–52 times larger than those for the most recent period of 2007–2010. Intense harvest pressure is the single most probable factor explaining the sustained decline in Chum Salmon abundance, but other interactive factors, notably natural variations in survival, the loss of spawning and rearing habitat, and poor data quality, also are important considerations. Nonetheless, the Skeena catchment is largely pristine today, and our robust estimates of historical abundance should be of value to contemporary management and conservation agencies for the rebuilding of such severely diminished populations.},
+	language = {en},
+	number = {4},
+	urldate = {2021-04-29},
+	journal = {Transactions of the American Fisheries Society},
+	author = {Price, Michael H. H. and Gayeski, Nick and Stanford, Jack A.},
+	month = jul,
+	year = {2013},
+	pages = {989--1004},
+	file = {Price et al. - 2013 - Abundance of Skeena River Chum Salmon during the E.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\GRBFAVIJ\\Price et al. - 2013 - Abundance of Skeena River Chum Salmon during the E.pdf:application/pdf},
+}
+
+@article{price_genetics_2019,
+	title = {Genetics of century‐old fish scales reveal population patterns of decline},
+	volume = {12},
+	issn = {1755-263X, 1755-263X},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/conl.12669},
+	doi = {10.1111/conl.12669},
+	abstract = {Conservation scientists rarely have the information required to understand changes in abundance over more than a few decades, even for important species like Pacific salmon. Such lack of historical information can underestimate the magnitude of decline for depressed populations. We applied genetic tools to a unique collection of 100-year-old salmon scales to reveal declines of 56\%–99\% in wild sockeye populations across Canada’s second largest salmon watershed, the Skeena River. These analyses reveal century-long declines that are much greater than those based on modern era abundance data, which suggested that only 7 of 13 populations declined over the last five decades. Populations of larger-bodied fish have declined the most in abundance, likely because of size-selective commercial fisheries. Our findings illustrate how a deep historical perspective can expand our understanding of past abundances to a time before species incurred significant losses from fishing, and help inform conservation for diminished populations.},
+	language = {en},
+	number = {6},
+	urldate = {2021-05-18},
+	journal = {Conservation Letters},
+	author = {Price, Michael H.H. and Connors, Brendan M. and Candy, John R. and McIntosh, Brenda and Beacham, Terry D. and Moore, Jonathan W. and Reynolds, John D.},
+	month = nov,
+	year = {2019},
+	file = {Price et al. - 2019 - Genetics of century‐old fish scales reveal populat.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\ZIJLSLSQ\\Price et al. - 2019 - Genetics of century‐old fish scales reveal populat.pdf:application/pdf},
+}
+
+@article{price_portfolio_2021,
+	title = {Portfolio simplification arising from a century of change in salmon population diversity and artificial production},
+	issn = {0021-8901, 1365-2664},
+	url = {https://onlinelibrary.wiley.com/doi/10.1111/1365-2664.13835},
+	doi = {10.1111/1365-2664.13835},
+	language = {en},
+	urldate = {2021-05-18},
+	journal = {Journal of Applied Ecology},
+	author = {Price, Michael H. H. and Moore, Jonathan W. and Connors, Brendan M. and Wilson, Kyle L. and Reynolds, John D.},
+	editor = {Punt, Andre},
+	month = feb,
+	year = {2021},
+	pages = {1365--2664.13835},
+	file = {Price et al. - 2021 - Portfolio simplification arising from a century of.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\TCN3SSGH\\Price et al. - 2021 - Portfolio simplification arising from a century of.pdf:application/pdf},
+}
+
+@techreport{bue_escapement_2001,
+	address = {Anchorage},
+	type = {Report to the {Board} of {Fisheries} {November} 2001},
+	title = {Escapement goal review of salmon stocks of {Upper} {Cook} {Inlet}.},
+	institution = {Alaska Department of Fish and Game},
+	author = {Bue, Brian G and Hasbrouck, James J},
+	year = {2001},
 }
