Chum chapter, recommended percentiles for lower benchmarks

--- a/caseStudyWP/bib/refs.bib
+++ b/caseStudyWP/bib/refs.bib
@@ -373,3 +373,28 @@
 	author = {Bue, Brian G and Hasbrouck, James J},
 	year = {2001},
 }
+
+@techreport{eggers_chum_2008,
+	address = {Anchorage},
+	title = {Chum salmon stock status and escapement goals in {Southeast} {Alaska}.},
+	url = {https://www.adfg.alaska.gov/FedAidPDFs/sp08-19.pdf},
+	language = {en},
+	number = {Special Publication No. 08-19},
+	institution = {Alaska Department of Fish and Game},
+	author = {Eggers, Douglas M and Heinl, Steven C},
+	year = {2008},
+	pages = {75},
+	file = {Eggers - Chum salmon stock status and escapement goals in S.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\SK3UDTBN\\Eggers - Chum salmon stock status and escapement goals in S.pdf:application/pdf},
+}
+
+@techreport{mckinley_review_2020,
+	address = {Anchorage},
+	title = {Review of salmon escapement goals in {Upper} {Cook} {Inlet}, {Alaska}, 2019.},
+	language = {en},
+	number = {Fishery Manuscript No. 20-02},
+	institution = {Alaska Department of Fish and Game},
+	author = {McKinley, Timothy R and DeCovich, Nicholas and Erickson, Jack W and Hamazaki, Toshihide and Begich, Robert and Vincent, Tania},
+	year = {2020},
+	pages = {107},
+	file = {McKinley et al. - Review of salmon escapement goals in Upper Cook In.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\M727NSRW\\McKinley et al. - Review of salmon escapement goals in Upper Cook In.pdf:application/pdf},
+}
